fixed a text overflow issue

--- a/style.css
+++ b/style.css
@@ -289,7 +289,7 @@ p {
 
   .bio {
     margin-top: 40px;
-    height: 500px;
+    height: 600px;
   }
 
   .emojis {
